Feature: Added Key Player Archetype with neon images (Messi, Ronaldo, Neymar)

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,6 +106,18 @@
                     <img id="result-image" src="" alt="Tactical Board">
                 </div>
             </div>
+
+            <!-- Key Player Section -->
+            <div class="player-content">
+                <div class="result-text">
+                    <h3>KEY PLAYER ARCHETYPE</h3>
+                    <h2 id="player-name" class="neon-text-pink"></h2>
+                    <p id="player-desc"></p>
+                </div>
+                <div class="result-visual">
+                    <img id="player-image" src="" alt="Key Player">
+                </div>
+            </div>
         </div>
 
     </div>
