Feature: Added detailed tactical instructions grid (Attack, Defense, Tempo, Instructions)

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,6 +101,26 @@
                     <h3>RECOMMENDED COUNTER</h3>
                     <h2 id="result-formation" class="neon-text"></h2>
                     <p id="result-explanation"></p>
+
+                    <!-- New Detailed Tactics Grid -->
+                    <div class="tactics-grid-display">
+                        <div class="tactic-box">
+                            <span class="label">Attacking Style</span>
+                            <span class="value" id="tactic-attack"></span>
+                        </div>
+                        <div class="tactic-box">
+                            <span class="label">Defensive Style</span>
+                            <span class="value" id="tactic-defense"></span>
+                        </div>
+                        <div class="tactic-box">
+                            <span class="label">Tempo</span>
+                            <span class="value" id="tactic-tempo"></span>
+                        </div>
+                        <div class="tactic-box full-width">
+                            <span class="label">Key Instruction</span>
+                            <span class="value highlight-text" id="tactic-instruction"></span>
+                        </div>
+                    </div>
                 </div>
                 <div class="result-visual">
                     <img id="result-image" src="" alt="Tactical Board">
