UI Upgrade: Added Scanning Animation, Pulse Effects, and Loading Overlay

--- a/templates/index.html
+++ b/templates/index.html
@@ -142,6 +142,11 @@
 
     </div>
 
+    <div class="loading-overlay" id="loading-overlay">
+        <div class="loading-spinner"></div>
+        <div class="loading-text">SIMULATING MATCH SCENARIOS...</div>
+    </div>
+
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 
